--- a/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
@@ -8,204 +8,219 @@
     tools:context="quewquewcrew.appngasal.view.activity.DetailLapangan">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFF"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/item.lapang.grid.image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/lap1" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFF"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="dp"
             android:orientation="vertical">
-                    <ImageView
-                        android:id="@+id/item.lapang.grid.image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/lap1" />
-                <LinearLayout
-                    android:layout_marginLeft="25dp"
-                    android:layout_width="360dp"
-                    android:layout_marginTop="-50dp"
-                    android:layout_height="wrap_content"
-                    android:background="#fafafa"
-                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/item.lapang.grid.name"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Your Name"
-                            android:layout_marginTop="5dp"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="40dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="120dp"
-                            android:layout_marginTop="3dp"
-                            android:gravity="right"
-                            android:text="RP."
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-                        <TextView
-                            android:id="@+id/item.lapang.grid.harga"
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="left"
-                            android:layout_marginTop="3dp"
-                            android:text="Harga"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:background="@drawable/border"></View>
-                        <TextView
-                            android:id="@+id/item.lapang.grid.alamat"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="5dp"
-                            android:gravity="left"
-                            android:text="Alamat"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/item.lapang.grid.kecamatan"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="5dp"
-                            android:gravity="left"
-                            android:text="Kecamatan"
-                            android:textSize="12sp" />
-                        <TextView
-                            android:id="@+id/jenis"
-                            android:layout_width="200dp"
-                            android:layout_marginLeft="5dp"
-                            android:layout_height="wrap_content"
-                            android:text="Jenis"
-                            android:layout_marginBottom="5dp"/>
-                    <LinearLayout
-                        android:layout_width="90dp"
-                        android:layout_marginLeft="275dp"
-                        android:layout_marginTop="-20dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/item.lapang.grid.notel"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="left"
-                            android:text="No Handphone"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-                    </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/item.lapang.grid.name"
+                    android:layout_width="295dp"
                     android:layout_height="wrap_content"
-                    android:text="Booking Here"
-                    android:textStyle="bold"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="left"
+                    android:text="Your Name"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/item.lapang.grid.notel"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textSize="24dp"/>
+                    android:text="No Handphone"
+                    android:textSize="12sp" />
             </LinearLayout>
-            <View
-                android:layout_width="150dp"
-                android:layout_height="3dp"
-                android:layout_gravity="center"
-                android:background="@drawable/border"></View>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="30dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    >
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="3dp"
+                    android:gravity="left"
+                    android:text="RP."
+                    android:textColor="#f44336 "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                    <Button
-                        android:id="@+id/btndate"
-                        android:layout_width="135dp"
-                        android:layout_height="40dp"
-                        android:text="Date"
-                        android:background="#dea717"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="#FFFFFF"
-                        android:layout_marginBottom="4dp"
-                        />
-
-                    <EditText
-                        android:id="@+id/etextdate"
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/item.lapang.grid.harga"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp">
+                    android:layout_marginTop="3dp"
+                    android:gravity="left"
+                    android:text="Harga"
+                    android:textColor="#f44336 "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                    <Button
-                        android:id="@+id/btntimestrat"
-                        android:layout_width="135dp"
-                        android:layout_height="40dp"
-                        android:text="Time Start"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginBottom="4dp"
-                        android:background="#dea717"
-                        android:textColor="#FFFFFF"/>
-
-                    <EditText
-                        android:id="@+id/etexttimestart"
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp">
-
-                    <Button
-                        android:id="@+id/btntimestop"
-                        android:layout_width="135dp"
-                        android:layout_height="40dp"
-                        android:text="Time Stop"
-                        android:layout_marginLeft="10dp"
-                        android:background="#dea717"
-                        android:textColor="#FFFFFF"/>
-
-                    <EditText
-                        android:id="@+id/etexttimestop"
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <Button
-                        android:id="@+id/btnbooking"
-                        android:layout_marginLeft="240dp"
-                        android:layout_width="150dp"
-                        android:background="#dea717"
-                        android:textColor="#FFFFFF"
-                        android:text="Booking"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
             </LinearLayout>
 
-    </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/border"></View>
+
+            <TextView
+                android:id="@+id/item.lapang.grid.alamat"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:gravity="left"
+                android:text="Alamat"
+                android:textSize="12sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/item.lapang.grid.kecamatan"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="left"
+                    android:text="Kecamatan"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/jenis"
+                    android:layout_width="185dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="right"
+                    android:text="Jenis" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Booking Here"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="3dp"
+            android:layout_gravity="center"
+            android:background="@drawable/border"></View>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp">
+
+                <Button
+                    android:id="@+id/btndate"
+                    android:layout_width="135dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="#dea717"
+                    android:text="Date"
+                    android:textColor="#FFFFFF" />
+
+                <EditText
+                    android:id="@+id/etextdate"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp">
+
+                <Button
+                    android:id="@+id/btntimestrat"
+                    android:layout_width="135dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="#dea717"
+                    android:text="Time Start"
+                    android:textColor="#FFFFFF" />
+
+                <EditText
+                    android:id="@+id/etexttimestart"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+
+                <Button
+                    android:id="@+id/btntimestop"
+                    android:layout_width="135dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="#dea717"
+                    android:text="Time Stop"
+                    android:textColor="#FFFFFF" />
+
+                <EditText
+                    android:id="@+id/etexttimestop"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btnbooking"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="240dp"
+                    android:background="#dea717"
+                    android:text="Booking"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+        </LinearLayout>
+
+</LinearLayout>
 </LinearLayout>
