--- a/AppNgasal/app/src/main/res/layout/activity_pembayaran.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_pembayaran.xml
@@ -42,40 +42,47 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="180dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="10dp"
-                        android:textStyle="bold"
-                        android:text="Nama Pemesan      :"
-                        android:textSize="18sp" />
+                android:layout_height="wrap_content"
+                android:text="Your Booking"
+                android:textSize="22dp"
+                android:gravity="center"
+                />
 
-                    <TextView
-                        android:id="@+id/namasewa"
-                        android:layout_width="180dp"
-                        android:layout_height="wrap_content"
-                        android:text="Nama"
-                        android:textAllCaps="true"
-                        android:textSize="18sp"
-                        android:layout_gravity="bottom"
-                        android:textStyle="bold" />
-                </LinearLayout>
             </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@drawable/border"></View>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+            <TextView
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:textStyle="bold"
+                android:text="Nama Pemesan      :"
+                android:textSize="18sp" />
 
+            <TextView
+                android:id="@+id/namasewa"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="Nama"
+                android:textAllCaps="true"
+                android:textSize="18sp"
+                android:layout_gravity="bottom"
+                android:textStyle="bold" />
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:layout_marginBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,8 +91,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="5dp"
                         android:textStyle="bold"
                         android:text="Tanggal Pemesan  :"
                         android:textSize="18sp" />
@@ -101,25 +108,21 @@
                 </LinearLayout>
 
             </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@drawable/border"></View>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:text="Jam Sewa              :"
+                        android:text="Jam Sewa               :"
                         android:textStyle="bold"
                         android:textSize="18sp" />
                     <TextView
@@ -144,27 +147,22 @@
                 </LinearLayout>
 
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginTop="-10dp"
-                android:background="@drawable/border"></View>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Biaya Sewa            :"
+                        android:text="Biaya Sewa             :"
                         android:textSize="18sp" />
 
                     <TextView
@@ -187,27 +185,22 @@
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginTop="-10dp"
-                android:background="@drawable/border"></View>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Saku Anda             :"
+                        android:text="Saku Anda              :"
                         android:textSize="18sp" />
                     <TextView
                         android:layout_width="40dp"
@@ -229,11 +222,15 @@
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@drawable/border"></View>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="10dp">
 
                 <Button
                     android:id="@+id/bayar"
